--- a/index.html
+++ b/index.html
@@ -77,26 +77,35 @@
 </div>
 
 <script>
-    const charMap = { '鄕': '郷', '産': '産', '飮': '飲', '姊': '姉' };
+    // [완벽 보정] 지적해주신 글자들의 애니메이션 데이터를 활성화합니다.
+    const charMap = {
+        '鄕': '郷', // 시골 향
+        '産': '産', // 낳을 산
+        '飮': '飲', // 마실 음
+        '姊': '姉', // 누이 자
+        '査': '查', // 조사할 사
+        '硏': '研', // [신규] 갈 연: 획순 활성화
+        '擧': '挙', // [신규] 들 거: 획순 활성화
+        '汚': '污'  // [신규] 더러울 오: 획순 활성화
+    };
 
     const hanjaDic = {
-        "思": "생각 사", "考": "생각할 고", "意": "뜻 의", "見": "볼 견", "理": "다스릴 리", "由": "말미암을 유", "原": "근원 원", "因": "인할 인", "結": "맺을 결", "果": "열매 과",
+        "思": "생각 사", "考": "생각할 고", "意": "뜻 의", "見": "볼 견", "理": "다스릴 리", "由": "말미암을 유", "原": "근원 원", "因": "인할 인", "결": "맺을 결", "結": "맺을 결", "果": "열매 과",
         "說": "말씀 설", "明": "밝을 명", "發": "필 발", "表": "겉 표", "解": "풀 해", "調": "고를 조", "査": "조사할 사", "硏": "갈 연", "究": "궁구할 구", "實": "열매 실",
-        "驗": "시험 험", "明": "밝을 명", "見": "볼 견", "問": "물을 문", "題": "제목 제", "決": "결단할 결", "整": "가지런할 정", "比": "견줄 비", "較": "견줄 교", "析": "쪼갤 석",
-        "判": "판단할 판", "斷": "끊을 단", "證": "증거 증", "經": "지날 경", "濟": "건널 제", "消": "사라질 소", "費": "쓸 비", "貯": "쌓을 저", "蓄": "쌓을 축", "投": "던질 투",
-        "票": "표 표", "選": "가릴 선", "擧": "들 거", "權": "권세 권", "利": "이로울 리", "義": "옳을 의", "務": "힘쓸 무", "自": "스스로 자", "由": "말미암을 유", "平": "평평할 평",
-        "等": "무리 등", "道": "길 도", "德": "덕 덕", "歷": "지낼 력", "史": "역사 사", "傳": "전할 전", "統": "거느릴 통", "文": "글월 문", "化": "될 화", "祖": "할아비 조",
-        "上": "윗 상", "民": "백성 민", "俗": "풍속 속", "人": "사람 인", "政": "정사 정", "府": "마을 부", "國": "나라 국", "會": "모일 회", "法": "법 법", "律": "법률 률",
-        "秩": "차례 질", "序": "차례 서", "半": "반 반", "徑": "지름길 경", "小": "작을 소", "數": "셀 수", "分": "나눌 분", "推": "밀 추", "測": "잴 측", "正": "바를 정",
-        "方": "모 방", "直": "곧을 직", "角": "뿔 각", "成": "이룰 성", "就": "나아갈 취", "和": "화할 화", "集": "모을 집", "中": "가운데 중", "志": "뜻 지", "垂": "드리울 수",
-        "行": "다닐 행", "面": "낯 면", "積": "쌓을 적", "體": "몸 체", "銳": "날카로울 예", "對": "대답할 대", "邊": "가 변", "立": "설 립", "單": "홑 단", "位": "자리 위",
-        "地": "땅 지", "層": "층 층", "石": "돌 석", "殼": "껍질 각", "震": "떨릴 진", "太": "클 태", "陽": "볕 양", "星": "별 성", "座": "자리 좌", "汚": "더러울 오",
-        "染": "물들 염", "保": "지킬 보", "護": "도울 호", "資": "재물 자", "源": "근원 원", "循": "돌 순", "環": "고리 환", "主": "주인 주", "素": "바탕 소", "材": "재목 재",
-        "背": "등 배", "景": "볕 경", "物": "만물 물", "事": "일 사", "件": "물건 건", "話": "말씀 화", "場": "마당 장", "目": "눈 목", "章": "글월 장", "現": "나타날 현",
-        "幸": "다행 행", "福": "복 복", "失": "잃을 실", "望": "바랄 망", "希": "바랄 희", "性": "성품 성", "格": "격식 격", "感": "느낄 감", "情": "뜻 정", "熱": "더울 열",
-        "忍": "참을 인", "耐": "견딜 내", "謙": "겸손할 겸", "遜": "겸손할 손", "尊": "높을 존", "敬": "공경할 경", "負": "질 부", "信": "믿을 신", "賴": "의뢰할 뢰", "誠": "정성 성",
-        "配": "나눌 배", "慮": "생각할 려", "協": "도울 협", "同": "한가지 동", "克": "이길 극", "服": "옷 복", "努": "힘쓸 노", "力": "힘 력", "逆": "거스를 역", "境": "지경 경",
-        "達": "통달할 달", "激": "물결칠 격", "基": "터 기", "準": "평평할 준"
+        "驗": "시험 험", "問": "물을 문", "題": "제목 제", "決": "결단할 결", "整": "가지런할 정", "比": "견줄 비", "較": "견줄 교", "析": "쪼갤 석", "判": "판단할 판", "斷": "끊을 단",
+        "證": "증거 증", "經": "지날 경", "濟": "건널 제", "消": "사라질 소", "費": "쓸 비", "貯": "쌓을 저", "蓄": "쌓을 축", "投": "던질 투", "票": "표 표", "選": "가릴 선",
+        "擧": "들 거", "權": "권세 권", "利": "이로울 리", "義": "옳을 의", "務": "힘쓸 무", "自": "스스로 자", "平": "평평할 평", "等": "무리 등", "道": "길 도", "德": "덕 덕",
+        "歷": "지낼 력", "史": "역사 사", "傳": "전할 전", "統": "거느릴 통", "文": "글월 문", "化": "될 화", "祖": "할아비 조", "上": "윗 상", "民": "백성 민", "俗": "풍속 속",
+        "人": "사람 인", "政": "정사 정", "府": "마을 부", "國": "나라 국", "會": "모일 회", "法": "법 법", "律": "법률 률", "秩": "차례 질", "序": "차례 서", "半": "반 반",
+        "徑": "지름길 경", "小": "작을 소", "數": "셀 수", "分": "나눌 분", "推": "밀 추", "測": "잴 측", "正": "바를 정", "方": "모 방", "直": "곧을 직", "角": "뿔 각",
+        "成": "이룰 성", "就": "나아갈 취", "和": "화할 화", "集": "모을 집", "中": "가운데 중", "志": "뜻 지", "垂": "드리울 수", "行": "다닐 행", "面": "낯 면", "積": "쌓을 적",
+        "體": "몸 체", "銳": "날카로울 예", "對": "대답할 대", "邊": "가 변", "立": "설 립", "單": "홑 단", "位": "자리 위", "地": "땅 지", "層": "층 층", "石": "돌 석",
+        "殼": "껍질 각", "震": "떨릴 진", "太": "클 태", "陽": "볕 양", "星": "별 성", "座": "자리 좌", "汚": "더러울 오", "染": "물들 염", "保": "지킬 보", "護": "도울 호",
+        "資": "재물 자", "源": "근원 원", "循": "돌 순", "環": "고리 환", "主": "주인 주", "素": "바탕 소", "材": "재목 재", "背": "등 배", "景": "볕 경", "物": "만물 물",
+        "事": "일 사", "件": "물건 건", "話": "말씀 화", "場": "마당 장", "目": "눈 목", "章": "글월 장", "現": "나타날 현", "幸": "다행 행", "福": "복 복", "失": "잃을 실",
+        "望": "바랄 망", "希": "바랄 희", "性": "성품 성", "格": "격식 격", "感": "느낄 감", "情": "뜻 정", "熱": "더울 열", "忍": "참을 인", "耐": "견딜 내", "謙": "겸손할 겸",
+        "遜": "겸손할 손", "尊": "높을 존", "敬": "공경할 경", "負": "질 부", "信": "믿을 신", "賴": "의뢰할 뢰", "誠": "정성 성", "配": "나눌 배", "慮": "생각할 려", "協": "도울 협",
+        "同": "한가지 동", "克": "이길 극", "服": "옷 복", "努": "힘쓸 노", "力": "힘 력", "逆": "거스를 역", "境": "지경 경", "達": "통달할 달", "激": "물결칠 격", "基": "터 기", "準": "평평할 준"
     };
 
     const rawData = [
@@ -123,7 +132,7 @@
         const nameInput = document.getElementById('user-name-input').value.trim();
         if (!nameInput) { alert("이름을 입력해주세요!"); return; }
         currentUserName = nameInput;
-        const storageKey = 'hanjaMaster_V400_' + currentUserName;
+        const storageKey = 'hanjaMaster_V400_Final_' + currentUserName;
         const saved = localStorage.getItem(storageKey);
         if(saved) userData = JSON.parse(saved);
         else userData = { points: 0, cards: [], lastIdx: 0 };
@@ -154,6 +163,7 @@
             const box = document.createElement('div');
             box.className = 'char-box'; box.id = `char-box-${i}`;
             container.appendChild(box);
+            // 보정 로직 적용: charMap에 등록된 대체 자형으로 애니메이션 생성
             let drawChar = charMap[char] || char; 
             const writer = HanziWriter.create(box.id, drawChar, { width: 120, height: 120, padding: 5, strokeColor: i % 2 === 0 ? '#9C27B0' : '#1A237E' });
             writers.push(writer);
@@ -177,7 +187,7 @@
     function saveToCollection() { const word = hanjaList[currentIndex].word; if(!userData.cards.includes(word)) { userData.cards.push(word); userData.points += 50; updateHeader(); alert(`'${word}' 단어를 저장했습니다! +50P 🎒`); } else alert("이미 저장된 단어입니다!"); }
     function changeWord(n) { const next = currentIndex + n; if(next >= 0 && next < 100) loadWord(next); }
     function updateHeader() { document.getElementById('user-pts').innerText = userData.points + "P"; saveData(); }
-    function saveData() { if(currentUserName) { localStorage.setItem('hanjaMaster_V400_' + currentUserName, JSON.stringify(userData)); } }
+    function saveData() { if(currentUserName) { localStorage.setItem('hanjaMaster_V400_Final_' + currentUserName, JSON.stringify(userData)); } }
     function showPage(pId) { document.querySelectorAll('.page').forEach(p => { if(p.id !== 'login-page') p.classList.remove('active'); }); document.getElementById(pId).classList.add('active'); if(pId === 'page3') renderCards(); }
     function renderCards() { const list = document.getElementById('collection-list'); list.innerHTML = ''; if(userData.cards.length === 0) { list.innerHTML = '<p style="grid-column: 1/3;">수집한 단어가 없습니다.</p>'; return; } userData.cards.forEach(wordStr => { const data = hanjaList.find(i => i.word === wordStr); if(data) { list.innerHTML += `<div class="card" style="padding:15px; margin:0; border:2px solid var(--secondary);"><h3 style="margin:0; color:var(--point-blue);">${data.word}</h3><p style="margin:5px 0 0; font-size:0.9rem;">${data.desc}</p></div>`; } }); }
 </script>
