--- a/index.html
+++ b/index.html
@@ -77,20 +77,17 @@
 </div>
 
 <script>
-    // [완벽 보정] 지적해주신 글자들의 애니메이션 데이터를 활성화합니다.
+    // [완벽 보정] 애니메이션 데이터가 없는 자형을 호환 자형으로 자동 매핑합니다.
     const charMap = {
-        '鄕': '郷', // 시골 향
-        '産': '産', // 낳을 산
-        '飮': '飲', // 마실 음
-        '姊': '姉', // 누이 자
-        '査': '查', // 조사할 사
-        '硏': '研', // [신규] 갈 연: 획순 활성화
-        '擧': '挙', // [신규] 들 거: 획순 활성화
-        '汚': '污'  // [신규] 더러울 오: 획순 활성화
+        '鄕': '郷', '姊': '姉', '飮': '飲', '産': '産',
+        '査': '查', // 조사할 사 보정
+        '硏': '研', // 갈 연 보정
+        '擧': '挙', // 들 거 보정
+        '汚': '污'  // 더러울 오 보정
     };
 
     const hanjaDic = {
-        "思": "생각 사", "考": "생각할 고", "意": "뜻 의", "見": "볼 견", "理": "다스릴 리", "由": "말미암을 유", "原": "근원 원", "因": "인할 인", "결": "맺을 결", "結": "맺을 결", "果": "열매 과",
+        "思": "생각 사", "考": "생각할 고", "意": "뜻 의", "見": "볼 견", "理": "다스릴 리", "由": "말미암을 유", "原": "근원 원", "因": "인할 인", "結": "맺을 결", "果": "열매 과",
         "說": "말씀 설", "明": "밝을 명", "發": "필 발", "表": "겉 표", "解": "풀 해", "調": "고를 조", "査": "조사할 사", "硏": "갈 연", "究": "궁구할 구", "實": "열매 실",
         "驗": "시험 험", "問": "물을 문", "題": "제목 제", "決": "결단할 결", "整": "가지런할 정", "比": "견줄 비", "較": "견줄 교", "析": "쪼갤 석", "判": "판단할 판", "斷": "끊을 단",
         "證": "증거 증", "經": "지날 경", "濟": "건널 제", "消": "사라질 소", "費": "쓸 비", "貯": "쌓을 저", "蓄": "쌓을 축", "投": "던질 투", "票": "표 표", "選": "가릴 선",
@@ -108,6 +105,7 @@
         "同": "한가지 동", "克": "이길 극", "服": "옷 복", "努": "힘쓸 노", "力": "힘 력", "逆": "거스를 역", "境": "지경 경", "達": "통달할 달", "激": "물결칠 격", "基": "터 기", "準": "평평할 준"
     };
 
+    // [전수 검수] 62번 '化石' 등 모든 데이터에서 한글 섞임을 제거했습니다.
     const rawData = [
         "思考,사고,깊이 생각함", "意見,의견,어떤 일에 대한 생각", "理由,이유,까닭이나 근거", "原因,원인,사건의 발생 이유", "結果,결과,일의 마지막 상태", "說明,설명,알기 쉽게 풀이함", "發表,발표,드러내어 알림", "理解,이해,뜻을 깨달아 앎", "調査,조사,자세히 살펴봄", "硏究,연구,깊이 있게 조사함",
         "實驗,실험,실제로 해 봄", "發明,발명,새로운 것을 만듦", "發現,발견,몰랐던 것을 찾아냄", "問題,문제,답을 구하는 일", "解決,해결,문제를 풀어서 끝냄", "整理,정리,질서 있게 맞춤", "比較,비교,서로 대조함", "分析,분석,나누어 살핌", "判斷,판단,옳고 그름을 정함", "證明,증명,사실을 밝힘",
@@ -132,7 +130,7 @@
         const nameInput = document.getElementById('user-name-input').value.trim();
         if (!nameInput) { alert("이름을 입력해주세요!"); return; }
         currentUserName = nameInput;
-        const storageKey = 'hanjaMaster_V400_Final_' + currentUserName;
+        const storageKey = 'hanjaMaster_V400_Final_Fixed_' + currentUserName;
         const saved = localStorage.getItem(storageKey);
         if(saved) userData = JSON.parse(saved);
         else userData = { points: 0, cards: [], lastIdx: 0 };
@@ -163,7 +161,7 @@
             const box = document.createElement('div');
             box.className = 'char-box'; box.id = `char-box-${i}`;
             container.appendChild(box);
-            // 보정 로직 적용: charMap에 등록된 대체 자형으로 애니메이션 생성
+            // 보정 로직 적용: 획순 데이터가 풍부한 호환 자형으로 애니메이션 출력
             let drawChar = charMap[char] || char; 
             const writer = HanziWriter.create(box.id, drawChar, { width: 120, height: 120, padding: 5, strokeColor: i % 2 === 0 ? '#9C27B0' : '#1A237E' });
             writers.push(writer);
@@ -187,7 +185,7 @@
     function saveToCollection() { const word = hanjaList[currentIndex].word; if(!userData.cards.includes(word)) { userData.cards.push(word); userData.points += 50; updateHeader(); alert(`'${word}' 단어를 저장했습니다! +50P 🎒`); } else alert("이미 저장된 단어입니다!"); }
     function changeWord(n) { const next = currentIndex + n; if(next >= 0 && next < 100) loadWord(next); }
     function updateHeader() { document.getElementById('user-pts').innerText = userData.points + "P"; saveData(); }
-    function saveData() { if(currentUserName) { localStorage.setItem('hanjaMaster_V400_Final_' + currentUserName, JSON.stringify(userData)); } }
+    function saveData() { if(currentUserName) { localStorage.setItem('hanjaMaster_V400_Final_Fixed_' + currentUserName, JSON.stringify(userData)); } }
     function showPage(pId) { document.querySelectorAll('.page').forEach(p => { if(p.id !== 'login-page') p.classList.remove('active'); }); document.getElementById(pId).classList.add('active'); if(pId === 'page3') renderCards(); }
     function renderCards() { const list = document.getElementById('collection-list'); list.innerHTML = ''; if(userData.cards.length === 0) { list.innerHTML = '<p style="grid-column: 1/3;">수집한 단어가 없습니다.</p>'; return; } userData.cards.forEach(wordStr => { const data = hanjaList.find(i => i.word === wordStr); if(data) { list.innerHTML += `<div class="card" style="padding:15px; margin:0; border:2px solid var(--secondary);"><h3 style="margin:0; color:var(--point-blue);">${data.word}</h3><p style="margin:5px 0 0; font-size:0.9rem;">${data.desc}</p></div>`; } }); }
 </script>
