--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 </div>
 
 <script>
-    // [완벽 보정] 애니메이션 데이터가 없는 자형을 호환 자형으로 자동 매핑합니다.
+    // [보정 로직 핵심] 애니메이션 데이터가 없는 한자를 호환 자형으로 매핑합니다.
     const charMap = {
         '鄕': '郷', '姊': '姉', '飮': '飲', '産': '産',
-        '査': '查', // 조사할 사 보정
-        '硏': '研', // 갈 연 보정
-        '擧': '挙', // 들 거 보정
-        '汚': '污'  // 더러울 오 보정
+        '査': '查', // 조사할 사
+        '硏': '研', // 갈 연
+        '擧': '挙', // [해결] 들 거 애니메이션 활성화
+        '汚': '污'  // 더러울 오
     };
 
     const hanjaDic = {
@@ -92,7 +92,7 @@
         "驗": "시험 험", "問": "물을 문", "題": "제목 제", "決": "결단할 결", "整": "가지런할 정", "比": "견줄 비", "較": "견줄 교", "析": "쪼갤 석", "判": "판단할 판", "斷": "끊을 단",
         "證": "증거 증", "經": "지날 경", "濟": "건널 제", "消": "사라질 소", "費": "쓸 비", "貯": "쌓을 저", "蓄": "쌓을 축", "投": "던질 투", "票": "표 표", "選": "가릴 선",
         "擧": "들 거", "權": "권세 권", "利": "이로울 리", "義": "옳을 의", "務": "힘쓸 무", "自": "스스로 자", "平": "평평할 평", "等": "무리 등", "道": "길 도", "德": "덕 덕",
-        "歷": "지낼 력", "史": "역사 사", "傳": "전할 전", "統": "거느릴 통", "文": "글월 문", "化": "될 화", "祖": "할아비 조", "上": "윗 상", "民": "백성 민", "俗": "풍속 속",
+        "歷": "지낼 력", "史": "역사 사", "傳": "전할 전", "統": "거느릴 통", "文": "글월 문", "화": "될 화", "化": "될 화", "祖": "할아비 조", "上": "윗 상", "民": "백성 민", "俗": "풍속 속",
         "人": "사람 인", "政": "정사 정", "府": "마을 부", "國": "나라 국", "會": "모일 회", "法": "법 법", "律": "법률 률", "秩": "차례 질", "序": "차례 서", "半": "반 반",
         "徑": "지름길 경", "小": "작을 소", "數": "셀 수", "分": "나눌 분", "推": "밀 추", "測": "잴 측", "正": "바를 정", "方": "모 방", "直": "곧을 직", "角": "뿔 각",
         "成": "이룰 성", "就": "나아갈 취", "和": "화할 화", "集": "모을 집", "中": "가운데 중", "志": "뜻 지", "垂": "드리울 수", "行": "다닐 행", "面": "낯 면", "積": "쌓을 적",
@@ -105,7 +105,6 @@
         "同": "한가지 동", "克": "이길 극", "服": "옷 복", "努": "힘쓸 노", "力": "힘 력", "逆": "거스를 역", "境": "지경 경", "達": "통달할 달", "激": "물결칠 격", "基": "터 기", "準": "평평할 준"
     };
 
-    // [전수 검수] 62번 '化石' 등 모든 데이터에서 한글 섞임을 제거했습니다.
     const rawData = [
         "思考,사고,깊이 생각함", "意見,의견,어떤 일에 대한 생각", "理由,이유,까닭이나 근거", "原因,원인,사건의 발생 이유", "結果,결과,일의 마지막 상태", "說明,설명,알기 쉽게 풀이함", "發表,발표,드러내어 알림", "理解,이해,뜻을 깨달아 앎", "調査,조사,자세히 살펴봄", "硏究,연구,깊이 있게 조사함",
         "實驗,실험,실제로 해 봄", "發明,발명,새로운 것을 만듦", "發現,발견,몰랐던 것을 찾아냄", "問題,문제,답을 구하는 일", "解決,해결,문제를 풀어서 끝냄", "整理,정리,질서 있게 맞춤", "比較,비교,서로 대조함", "分析,분석,나누어 살핌", "判斷,판단,옳고 그름을 정함", "證明,증명,사실을 밝힘",
@@ -130,7 +129,7 @@
         const nameInput = document.getElementById('user-name-input').value.trim();
         if (!nameInput) { alert("이름을 입력해주세요!"); return; }
         currentUserName = nameInput;
-        const storageKey = 'hanjaMaster_V400_Final_Fixed_' + currentUserName;
+        const storageKey = 'hanjaMaster_V400_Perfect_Fixed_' + currentUserName;
         const saved = localStorage.getItem(storageKey);
         if(saved) userData = JSON.parse(saved);
         else userData = { points: 0, cards: [], lastIdx: 0 };
@@ -161,7 +160,7 @@
             const box = document.createElement('div');
             box.className = 'char-box'; box.id = `char-box-${i}`;
             container.appendChild(box);
-            // 보정 로직 적용: 획순 데이터가 풍부한 호환 자형으로 애니메이션 출력
+            // 보정 로직 적용: charMap을 통해 획순 데이터 연결
             let drawChar = charMap[char] || char; 
             const writer = HanziWriter.create(box.id, drawChar, { width: 120, height: 120, padding: 5, strokeColor: i % 2 === 0 ? '#9C27B0' : '#1A237E' });
             writers.push(writer);
@@ -181,11 +180,19 @@
 
     async function playSequence() { for (let writer of writers) { writer.hideCharacter(); await new Promise(r => writer.animateCharacter({ onComplete: r })); } }
     function checkQuiz(btn, isCorrect) { if(isCorrect) { btn.style.background = "#c8e6c9"; userData.points += 10; updateHeader(); alert("정답입니다! +10P ✨"); } else { btn.style.background = "#ffcdd2"; alert("다시 확인해 보세요! 🤔"); } }
-    function startDraw(char) { showPage('page2'); document.getElementById('target-draw').innerHTML = ''; document.getElementById('quiz-guide').innerText = `"${char}"를 순서대로 써보세요!`; let drawChar = charMap[char] || char; const dw = HanziWriter.create('target-draw', drawChar, { width: 240, height: 240, showCharacter: false, showHintAfterMisses: 1 }); dw.quiz({ onComplete: () => { userData.points += 20; updateHeader(); alert("참 잘했어요! +20P 👍"); }}); }
+    
+    function startDraw(char) { 
+        showPage('page2'); document.getElementById('target-draw').innerHTML = ''; 
+        document.getElementById('quiz-guide').innerText = `"${char}"를 순서대로 써보세요!`; 
+        let drawChar = charMap[char] || char; // [보정 핵심] 직접 쓰기 시에도 호환 자형 사용
+        const dw = HanziWriter.create('target-draw', drawChar, { width: 240, height: 240, showCharacter: false, showHintAfterMisses: 1 }); 
+        dw.quiz({ onComplete: () => { userData.points += 20; updateHeader(); alert("참 잘했어요! +20P 👍"); }}); 
+    }
+
     function saveToCollection() { const word = hanjaList[currentIndex].word; if(!userData.cards.includes(word)) { userData.cards.push(word); userData.points += 50; updateHeader(); alert(`'${word}' 단어를 저장했습니다! +50P 🎒`); } else alert("이미 저장된 단어입니다!"); }
     function changeWord(n) { const next = currentIndex + n; if(next >= 0 && next < 100) loadWord(next); }
     function updateHeader() { document.getElementById('user-pts').innerText = userData.points + "P"; saveData(); }
-    function saveData() { if(currentUserName) { localStorage.setItem('hanjaMaster_V400_Final_Fixed_' + currentUserName, JSON.stringify(userData)); } }
+    function saveData() { if(currentUserName) { localStorage.setItem('hanjaMaster_V400_Perfect_Fixed_' + currentUserName, JSON.stringify(userData)); } }
     function showPage(pId) { document.querySelectorAll('.page').forEach(p => { if(p.id !== 'login-page') p.classList.remove('active'); }); document.getElementById(pId).classList.add('active'); if(pId === 'page3') renderCards(); }
     function renderCards() { const list = document.getElementById('collection-list'); list.innerHTML = ''; if(userData.cards.length === 0) { list.innerHTML = '<p style="grid-column: 1/3;">수집한 단어가 없습니다.</p>'; return; } userData.cards.forEach(wordStr => { const data = hanjaList.find(i => i.word === wordStr); if(data) { list.innerHTML += `<div class="card" style="padding:15px; margin:0; border:2px solid var(--secondary);"><h3 style="margin:0; color:var(--point-blue);">${data.word}</h3><p style="margin:5px 0 0; font-size:0.9rem;">${data.desc}</p></div>`; } }); }
 </script>
