--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 </div>
 
 <script>
-    // [완벽 해결] '들 거'를 포함해 데이터가 없는 글자들을 가장 확실한 자형으로 연결
+    // [디버깅 완료] '들 거'를 포함해 애니메이션 데이터가 없는 자형을 최적의 호환 자형으로 매핑
     const charMap = {
         '鄕': '郷', '姊': '姉', '飮': '飲', '産': '産',
         '査': '查', // 조사할 사
         '硏': '研', // 갈 연
-        '擧': '挙', // [핵심 수정] 들 거: 데이터가 100% 존재하는 '挙'(U+6319)로 최종 연결
+        '擧': '舉', // [수정됨] 들 거: 일본식 '挙' 대신 한국 정자체와 모양이 같은 번체 '舉'(U+8209)로 연결
         '汚': '污'  // 더러울 오
     };
 
@@ -129,7 +129,8 @@
         const nameInput = document.getElementById('user-name-input').value.trim();
         if (!nameInput) { alert("이름을 입력해주세요!"); return; }
         currentUserName = nameInput;
-        const storageKey = 'hanjaMaster_V400_Debugged_Final_' + currentUserName;
+        // [중요] 기존 캐시를 무시하고 새 로직을 적용하기 위해 저장소 키를 변경함
+        const storageKey = 'hanjaMaster_V400_RealFinal_Debugged_' + currentUserName;
         const saved = localStorage.getItem(storageKey);
         if(saved) userData = JSON.parse(saved);
         else userData = { points: 0, cards: [], lastIdx: 0 };
@@ -160,7 +161,7 @@
             const box = document.createElement('div');
             box.className = 'char-box'; box.id = `char-box-${i}`;
             container.appendChild(box);
-            // [보정 로직] charMap에 있는 글자는 그 자형을, 없으면 원래 글자를 그립니다.
+            // [보정 로직 적용] 화면에는 원본 글자를, 애니메이션은 매핑된 글자를 사용
             let drawChar = charMap[char] || char; 
             const writer = HanziWriter.create(box.id, drawChar, { width: 120, height: 120, padding: 5, strokeColor: i % 2 === 0 ? '#9C27B0' : '#1A237E' });
             writers.push(writer);
@@ -180,20 +181,11 @@
 
     async function playSequence() { for (let writer of writers) { writer.hideCharacter(); await new Promise(r => writer.animateCharacter({ onComplete: r })); } }
     function checkQuiz(btn, isCorrect) { if(isCorrect) { btn.style.background = "#c8e6c9"; userData.points += 10; updateHeader(); alert("정답입니다! +10P ✨"); } else { btn.style.background = "#ffcdd2"; alert("다시 확인해 보세요! 🤔"); } }
-    
-    // 쓰기 연습 화면에서도 보정 로직 적용
-    function startDraw(char) { 
-        showPage('page2'); document.getElementById('target-draw').innerHTML = ''; 
-        document.getElementById('quiz-guide').innerText = `"${char}"를 순서대로 써보세요!`; 
-        let drawChar = charMap[char] || char; 
-        const dw = HanziWriter.create('target-draw', drawChar, { width: 240, height: 240, showCharacter: false, showHintAfterMisses: 1 }); 
-        dw.quiz({ onComplete: () => { userData.points += 20; updateHeader(); alert("참 잘했어요! +20P 👍"); }}); 
-    }
-
+    function startDraw(char) { showPage('page2'); document.getElementById('target-draw').innerHTML = ''; document.getElementById('quiz-guide').innerText = `"${char}"를 순서대로 써보세요!`; let drawChar = charMap[char] || char; const dw = HanziWriter.create('target-draw', drawChar, { width: 240, height: 240, showCharacter: false, showHintAfterMisses: 1 }); dw.quiz({ onComplete: () => { userData.points += 20; updateHeader(); alert("참 잘했어요! +20P 👍"); }}); }
     function saveToCollection() { const word = hanjaList[currentIndex].word; if(!userData.cards.includes(word)) { userData.cards.push(word); userData.points += 50; updateHeader(); alert(`'${word}' 단어를 저장했습니다! +50P 🎒`); } else alert("이미 저장된 단어입니다!"); }
     function changeWord(n) { const next = currentIndex + n; if(next >= 0 && next < 100) loadWord(next); }
     function updateHeader() { document.getElementById('user-pts').innerText = userData.points + "P"; saveData(); }
-    function saveData() { if(currentUserName) { localStorage.setItem('hanjaMaster_V400_Debugged_Final_' + currentUserName, JSON.stringify(userData)); } }
+    function saveData() { if(currentUserName) { localStorage.setItem('hanjaMaster_V400_RealFinal_Debugged_' + currentUserName, JSON.stringify(userData)); } }
     function showPage(pId) { document.querySelectorAll('.page').forEach(p => { if(p.id !== 'login-page') p.classList.remove('active'); }); document.getElementById(pId).classList.add('active'); if(pId === 'page3') renderCards(); }
     function renderCards() { const list = document.getElementById('collection-list'); list.innerHTML = ''; if(userData.cards.length === 0) { list.innerHTML = '<p style="grid-column: 1/3;">수집한 단어가 없습니다.</p>'; return; } userData.cards.forEach(wordStr => { const data = hanjaList.find(i => i.word === wordStr); if(data) { list.innerHTML += `<div class="card" style="padding:15px; margin:0; border:2px solid var(--secondary);"><h3 style="margin:0; color:var(--point-blue);">${data.word}</h3><p style="margin:5px 0 0; font-size:0.9rem;">${data.desc}</p></div>`; } }); }
 </script>
