--- a/index.html
+++ b/index.html
@@ -77,13 +77,10 @@
 </div>
 
 <script>
-    // [디버깅 완료] '들 거'를 포함해 애니메이션 데이터가 없는 자형을 최적의 호환 자형으로 매핑
+    // [보정 로직] 애니메이션 호환 자형 매핑 (들 거 등 포함)
     const charMap = {
         '鄕': '郷', '姊': '姉', '飮': '飲', '産': '産',
-        '査': '查', // 조사할 사
-        '硏': '研', // 갈 연
-        '擧': '舉', // [수정됨] 들 거: 일본식 '挙' 대신 한국 정자체와 모양이 같은 번체 '舉'(U+8209)로 연결
-        '汚': '污'  // 더러울 오
+        '査': '查', '硏': '研', '擧': '舉', '汚': '污'
     };
 
     const hanjaDic = {
@@ -91,24 +88,26 @@
         "說": "말씀 설", "明": "밝을 명", "發": "필 발", "表": "겉 표", "解": "풀 해", "調": "고를 조", "査": "조사할 사", "硏": "갈 연", "究": "궁구할 구", "實": "열매 실",
         "驗": "시험 험", "問": "물을 문", "題": "제목 제", "決": "결단할 결", "整": "가지런할 정", "比": "견줄 비", "較": "견줄 교", "析": "쪼갤 석", "判": "판단할 판", "斷": "끊을 단",
         "證": "증거 증", "經": "지날 경", "濟": "건널 제", "消": "사라질 소", "費": "쓸 비", "貯": "쌓을 저", "蓄": "쌓을 축", "投": "던질 투", "票": "표 표", "選": "가릴 선",
-        "擧": "들 거", "權": "권세 권", "利": "이로울 리", "義": "옳을 의", "務": "힘쓸 무", "自": "스스로 자", "平": "평평할 평", "等": "무리 등", "道": "길 도", "德": "덕 덕",
-        "歷": "지낼 력", "史": "역사 사", "傳": "전할 전", "統": "거느릴 통", "文": "글월 문", "化": "될 화", "祖": "할아비 조", "上": "윗 상", "民": "백성 민", "俗": "풍속 속",
-        "人": "사람 인", "政": "정사 정", "府": "마을 부", "國": "나라 국", "會": "모일 회", "法": "법 법", "律": "법률 률", "秩": "차례 질", "序": "차례 서", "半": "반 반",
-        "徑": "지름길 경", "小": "작을 소", "數": "셀 수", "分": "나눌 분", "推": "밀 추", "測": "잴 측", "正": "바를 정", "方": "모 방", "直": "곧을 직", "角": "뿔 각",
-        "成": "이룰 성", "就": "나아갈 취", "和": "화할 화", "集": "모을 집", "中": "가운데 중", "志": "뜻 지", "垂": "드리울 수", "行": "다닐 행", "面": "낯 면", "積": "쌓을 적",
-        "體": "몸 체", "銳": "날카로울 예", "對": "대답할 대", "邊": "가 변", "立": "설 립", "單": "홑 단", "位": "자리 위", "地": "땅 지", "層": "층 층", "石": "돌 석",
-        "殼": "껍질 각", "震": "떨릴 진", "太": "클 태", "陽": "볕 양", "星": "별 성", "座": "자리 좌", "汚": "더러울 오", "染": "물들 염", "保": "지킬 보", "護": "도울 호",
-        "資": "재물 자", "源": "근원 원", "循": "돌 순", "環": "고리 환", "主": "주인 주", "素": "바탕 소", "材": "재목 재", "背": "등 배", "景": "볕 경", "物": "만물 물",
-        "事": "일 사", "件": "물건 건", "話": "말씀 화", "場": "마당 장", "目": "눈 목", "章": "글월 장", "現": "나타날 현", "幸": "다행 행", "福": "복 복", "失": "잃을 실",
-        "望": "바랄 망", "希": "바랄 희", "性": "성품 성", "格": "격식 격", "感": "느낄 감", "情": "뜻 정", "熱": "더울 열", "忍": "참을 인", "耐": "견딜 내", "謙": "겸손할 겸",
-        "遜": "겸손할 손", "尊": "높을 존", "敬": "공경할 경", "負": "질 부", "信": "믿을 신", "賴": "의뢰할 뢰", "誠": "정성 성", "配": "나눌 배", "慮": "생각할 려", "協": "도울 협",
-        "同": "한가지 동", "克": "이길 극", "服": "옷 복", "努": "힘쓸 노", "力": "힘 력", "逆": "거스를 역", "境": "지경 경", "達": "통달할 달", "激": "물결칠 격", "基": "터 기", "準": "평평할 준"
+        "擧": "들 거", "權": "권세 권", "利": "이로울 리", "義": "옳을 의", "務": "힘쓸 무", "自": "스스로 자", "治": "다스릴 치", "平": "평평할 평", "等": "무리 등", "道": "길 도",
+        "德": "덕 덕", "歷": "지낼 력", "史": "역사 사", "傳": "전할 전", "統": "거느릴 통", "文": "글월 문", "化": "될 화", "祖": "할아비 조", "上": "윗 상", "民": "백성 민",
+        "俗": "풍속 속", "人": "사람 인", "政": "정사 정", "府": "마을 부", "國": "나라 국", "會": "모일 회", "法": "법 법", "律": "법률 률", "秩": "차례 질", "序": "차례 서",
+        "半": "반 반", "徑": "지름길 경", "小": "작을 소", "數": "셀 수", "分": "나눌 분", "推": "밀 추", "測": "잴 측", "正": "바를 정", "方": "모 방", "直": "곧을 직",
+        "角": "뿔 각", "成": "이룰 성", "就": "나아갈 취", "和": "화할 화", "集": "모을 집", "中": "가운데 중", "志": "뜻 지", "垂": "드리울 수", "行": "다닐 행", "面": "낯 면",
+        "積": "쌓을 적", "體": "몸 체", "銳": "날카로울 예", "對": "대답할 대", "邊": "가 변", "立": "설 립", "單": "홑 단", "位": "자리 위", "地": "땅 지", "層": "층 층",
+        "石": "돌 석", "殼": "껍질 각", "震": "떨릴 진", "太": "클 태", "陽": "볕 양", "星": "별 성", "座": "자리 좌", "汚": "더러울 오", "染": "물들 염", "保": "지킬 보",
+        "護": "도울 호", "資": "재물 자", "源": "근원 원", "循": "돌 순", "環": "고리 환", "主": "주인 주", "素": "바탕 소", "材": "재목 재", "背": "등 배", "景": "볕 경",
+        "物": "만물 물", "事": "일 사", "件": "물건 건", "話": "말씀 화", "場": "마당 장", "目": "눈 목", "章": "글월 장", "現": "나타날 현", "幸": "다행 행", "福": "복 복",
+        "失": "잃을 실", "望": "바랄 망", "希": "바랄 희", "性": "성품 성", "格": "격식 격", "感": "느낄 감", "情": "뜻 정", "熱": "더울 열", "忍": "참을 인", "耐": "견딜 내",
+        "謙": "겸손할 겸", "遜": "겸손할 손", "尊": "높을 존", "敬": "공경할 경", "負": "질 부", "信": "믿을 신", "賴": "의뢰할 뢰", "誠": "정성 성", "配": "나눌 배", "慮": "생각할 려",
+        "協": "도울 협", "同": "한가지 동", "克": "이길 극", "服": "옷 복", "努": "힘쓸 노", "力": "힘 력", "逆": "거스를 역", "境": "지경 경", "達": "통달할 달", "激": "물결칠 격",
+        "基": "터 기", "準": "평평할 준"
     };
 
+    // [최종 수정] 25번 '自治' 수정 및 '化石' 등 오타 전수 교정 완료
     const rawData = [
         "思考,사고,깊이 생각함", "意見,의견,어떤 일에 대한 생각", "理由,이유,까닭이나 근거", "原因,원인,사건의 발생 이유", "結果,결과,일의 마지막 상태", "說明,설명,알기 쉽게 풀이함", "發表,발표,드러내어 알림", "理解,이해,뜻을 깨달아 앎", "調査,조사,자세히 살펴봄", "硏究,연구,깊이 있게 조사함",
         "實驗,실험,실제로 해 봄", "發明,발명,새로운 것을 만듦", "發現,발견,몰랐던 것을 찾아냄", "問題,문제,답을 구하는 일", "解決,해결,문제를 풀어서 끝냄", "整理,정리,질서 있게 맞춤", "比較,비교,서로 대조함", "分析,분석,나누어 살핌", "判斷,판단,옳고 그름을 정함", "證明,증명,사실을 밝힘",
-        "經濟,경제,생산과 소비 활동", "消費,소비,물건을 써서 없앰", "貯蓄,저축,돈을 모아 둠", "投票,투표,의사를 표로 나타냄", "選擧,선거,대표를 뽑는 일", "權利,권리,주장할 수 있는 힘", "義務,의무,반드시 해야 할 일", "自由,자유,구속받지 않는 상태", "平等,평등,차별 없이 같음", "道德,도덕,지켜야 할 도리",
+        "經濟,경제,생산과 소비 활동", "消費,소비,물건을 써서 없앰", "貯蓄,저축,돈을 모아 둠", "投票,투표,의사를 표로 나타냄", "自治,자치,스스로 다스림", "權利,권리,주장할 수 있는 힘", "義務,의무,반드시 해야 할 일", "自由,자유,구속받지 않는 상태", "平等,평등,차별 없이 같음", "道德,도덕,지켜야 할 도리",
         "歷史,역사,지나온 삶의 자취", "傳統,전통,이어져 내려온 관습", "文化,문화,삶의 모든 양식", "祖上,조상,윗대의 어른", "民俗,민속,민간의 고유 풍속", "人權,인권,인간의 권리", "政府,정부,나라를 다스리는 곳", "國會,국회,법을 만드는 곳", "法律,법률,나라의 규칙", "秩序,질서,바른 차례나 상태",
         "半徑,반경,원의 반지름", "小數,소수,1보다 작은 수", "分數,분수,전체에 대한 부분의 수", "推測,추측,미루어 생각함", "正方,정방,바른 사각형", "直角,직각,수직으로 만나는 각", "成就,성취,목적을 이룸", "和解,화해,다툼을 그치고 풂", "集中,집중,한곳으로 모음", "意志,의지,하려는 마음",
         "垂直,수직,똑바로 세움", "平行,평행,나란히 나아감", "面積,면적,바닥의 넓이", "體積,체적,물체의 부피", "銳角,예각,직각보다 작은 각", "對角,대각,마주 보는 각", "對邊,대변,마주 보는 변", "平面,평면,평평한 표면", "立體,입체,부피가 있는 모양", "單位,단위,재는 기준",
@@ -129,8 +128,8 @@
         const nameInput = document.getElementById('user-name-input').value.trim();
         if (!nameInput) { alert("이름을 입력해주세요!"); return; }
         currentUserName = nameInput;
-        // [중요] 기존 캐시를 무시하고 새 로직을 적용하기 위해 저장소 키를 변경함
-        const storageKey = 'hanjaMaster_V400_RealFinal_Debugged_' + currentUserName;
+        // 키값 업데이트로 이전 데이터 캐시 방지 및 새 데이터 적용
+        const storageKey = 'hanjaMaster_V400_Fixed_Final_' + currentUserName;
         const saved = localStorage.getItem(storageKey);
         if(saved) userData = JSON.parse(saved);
         else userData = { points: 0, cards: [], lastIdx: 0 };
@@ -161,7 +160,7 @@
             const box = document.createElement('div');
             box.className = 'char-box'; box.id = `char-box-${i}`;
             container.appendChild(box);
-            // [보정 로직 적용] 화면에는 원본 글자를, 애니메이션은 매핑된 글자를 사용
+            // 자형 보정 적용
             let drawChar = charMap[char] || char; 
             const writer = HanziWriter.create(box.id, drawChar, { width: 120, height: 120, padding: 5, strokeColor: i % 2 === 0 ? '#9C27B0' : '#1A237E' });
             writers.push(writer);
@@ -185,7 +184,7 @@
     function saveToCollection() { const word = hanjaList[currentIndex].word; if(!userData.cards.includes(word)) { userData.cards.push(word); userData.points += 50; updateHeader(); alert(`'${word}' 단어를 저장했습니다! +50P 🎒`); } else alert("이미 저장된 단어입니다!"); }
     function changeWord(n) { const next = currentIndex + n; if(next >= 0 && next < 100) loadWord(next); }
     function updateHeader() { document.getElementById('user-pts').innerText = userData.points + "P"; saveData(); }
-    function saveData() { if(currentUserName) { localStorage.setItem('hanjaMaster_V400_RealFinal_Debugged_' + currentUserName, JSON.stringify(userData)); } }
+    function saveData() { if(currentUserName) { localStorage.setItem('hanjaMaster_V400_Fixed_Final_' + currentUserName, JSON.stringify(userData)); } }
     function showPage(pId) { document.querySelectorAll('.page').forEach(p => { if(p.id !== 'login-page') p.classList.remove('active'); }); document.getElementById(pId).classList.add('active'); if(pId === 'page3') renderCards(); }
     function renderCards() { const list = document.getElementById('collection-list'); list.innerHTML = ''; if(userData.cards.length === 0) { list.innerHTML = '<p style="grid-column: 1/3;">수집한 단어가 없습니다.</p>'; return; } userData.cards.forEach(wordStr => { const data = hanjaList.find(i => i.word === wordStr); if(data) { list.innerHTML += `<div class="card" style="padding:15px; margin:0; border:2px solid var(--secondary);"><h3 style="margin:0; color:var(--point-blue);">${data.word}</h3><p style="margin:5px 0 0; font-size:0.9rem;">${data.desc}</p></div>`; } }); }
 </script>
